SERVER-45289 Fix uninitialized variable in the validate adaptor